<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="340dp"
        android:layout_height="71dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_here_your_food"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/what_have_you_eaten"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="340dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_here_the_grams"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        android:autofillHints="" />

    <Button
        android:id="@+id/button1"
        android:layout_width="142dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:onClick="scanFood"
        android:text="@string/calculate"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="414dp"
        android:layout_height="106dp"
        android:layout_marginTop="36dp"
        android:gravity="center|center_horizontal"
        android:text="@string/welcome_to_eqdiet_alpha_mobile_n_ncoded_by_daniel_l_pez_tena"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />
</androidx.constraintlayout.widget.ConstraintLayout>